# lux

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
components/: Cargo.toml
components/src/: lib.rs
crates/lux_avatar_generic/: Cargo.toml
crates/lux_avatar_generic/src/: lib.rs
crates/lux_avatar_generic/src/avatars/: bone_assigner.rs  bones.rs  mod.rs
crates/lux_avatar_vrm/: Cargo.toml
crates/lux_avatar_vrm/src/: lib.rs
crates/lux_cli/: Cargo.toml
crates/lux_cli/src/: lib.rs
crates/lux_components/: Cargo.toml
crates/lux_components/src/: avatars.rs  components.rs  lib.rs  local_user.rs  reference.rs  user.rs
crates/lux_components/src/avatars/: bone_assigner.rs  bones.rs  mod.rs
crates/lux_desktop/: Cargo.toml
crates/lux_desktop/src/: console.rs  layouts.rs  lib.rs  menu.rs
crates/lux_desktop_camera/: Cargo.toml
crates/lux_desktop_camera/src/: lib.rs
crates/lux_headless/: Cargo.toml
crates/lux_headless/src/: lib.rs
crates/lux_lib/: Cargo.toml
crates/lux_lib/src/: lib.rs
crates/lux_networking/: Cargo.toml
crates/lux_networking/src/: lib.rs
crates/lux_world/: Cargo.toml
crates/lux_world/assets/: cube.glb
crates/lux_world/examples/: importer_uuid_test.rs
crates/lux_world/src/: empty_world.rs  importer.rs  lib.rs
crates/lux_xr/: Cargo.toml
crates/lux_xr/src/: avatar_assigner.rs  flightcam.rs  lib.rs  naming.rs
crates/lux_xr_avatar_generic/: Cargo.toml
crates/lux_xr_avatar_generic/src/: avatar_assigner.rs  lib.rs
desktop_camera/: Cargo.toml
desktop_camera/src/: lib.rs
docs/: Architecture.md  Development.md  List.md
src/: cli.rs  desktop.rs  initial.rs  layouts.rs  lib.rs  main.rs  menu.rs  networking.rs  world.rs  xr.rs
src/desktop/: layouts.rs  menu.rs
src/menu/: layout.rs
