[package]
name = "lux"
version = "0.1.0"
edition = "2021"

[dependencies]
lux_lib = { path = "crates/lux_lib" }

[workspace]
members = ["crates/*"]

[workspace.dependencies]
cfg-if = "1.0.0"
clap = { version = "4.5.19", features = ["derive"] }
bevy = { version = "0.14" }
bevy_sync = "0.14.3"
bevy_egui = "0.29"

# Below are unstable crates that require patching or forking

bevy_console = { git = "https://github.com/raffaeleragni/bevy-console" }
# Editor -
bevy_editor_pls = { git = "https://github.com/raffaeleragni/bevy_editor_pls" }

# IK -----
bevy_mod_inverse_kinematics = { git = "https://github.com/raffaeleragni/bevy_mod_inverse_kinematics" }
# XR -----
bevy_mod_openxr = { git = "https://github.com/raffaeleragni/bevy_oxr" }
bevy_mod_xr = { git = "https://github.com/raffaeleragni/bevy_oxr" }
bevy_xr_utils = { git = "https://github.com/raffaeleragni/bevy_oxr" }

[features]
default = []
xr = ["lux_lib/xr"]
