[package]
name = "lux"
version = "0.1.0"
edition = "2021"

[dependencies]
lux_lib = { path = "crates/lux_lib" }

[workspace]
members = ["crates/*"]

[workspace.dependencies]
cfg-if = "1.0.0"
clap = { version = "4.5.19", features = ["derive"] }
bevy = { version = "0.15" }
bevy_sync = "0.15.0"
bevy_egui = "0.31.1"
avian3d = "0.2.0"

bevy_editor_pls = "0.10.0"

bevy_mod_openxr = "0.1.0"
bevy_mod_xr = "0.1.0"
bevy_xr_utils = "0.1.0"

# Below are unstable crates that require patching or forking

# IK -----
bevy_mod_inverse_kinematics = { git = "https://github.com/raffaeleragni/bevy_mod_inverse_kinematics" }
#bevy_vr_controller = { path = "../bevy_vr_controller", default-features = false }
bevy_vr_controller = { git = "https://github.com/raffaeleragni/bevy_vr_controller", default-features = false }

[features]
default = ["xr"]
vrm = ["lux_lib/vrm"]
xr = ["lux_lib/xr"]
