[package]
name = "lux_desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12", default-features = false }
bevy_egui = "0.23.0"
bevy_editor_pls = "0.6"
lux_desktop_camera = { path = "../lux_desktop_camera" }
