[package]
name = "lux_desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
bevy_egui.workspace = true
bevy_editor_pls.workspace = true
clap.workspace = true
lux_desktop_camera = { path = "../lux_desktop_camera" }
