[package]
name = "lux_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
bevy_sync.workspace = true
lux_cli = { path = "../lux_cli" }

[dev-dependencies]
bevy_editor_pls.workspace = true
