[package]
name = "lux_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
bevy_sync.workspace = true
bevy_vr_controller.workspace = true
lux_cli = { path = "../lux_cli" }
lux_components = { path = "../lux_components" }
lux_avatar_generic = { path = "../lux_avatar_generic" }
lux_avatar_vrm = { path = "../lux_avatar_vrm" }

[dev-dependencies]
bevy_editor_pls.workspace = true
