[package]
name = "lux_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
bevy_sync.workspace = true
bevy_vr_controller.workspace = true
lux_cli = { path = "../lux_cli" }
lux_components = { path = "../lux_components" }
lux_avatar_generic = { path = "../lux_avatar_generic" }
lux_avatar_vrm = { path = "../lux_avatar_vrm", optional = true }

[dev-dependencies]
bevy_editor_pls.workspace = true

[features]
default = []
vrm = ["dep:lux_avatar_vrm"]
xr = ["bevy_vr_controller/xr", "lux_avatar_vrm/xr"]
