[package]
name = "lux_xr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
bevy_mod_openxr.workspace = true
bevy_mod_xr.workspace = true
bevy_xr_utils.workspace = true
lux_components = { path = "../lux_components" }
lux_xr_avatar_generic = { path = "../lux_xr_avatar_generic" }

